--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -760,11 +760,23 @@ body {
 .playlist-list-content__description {
   color: var(--layout__secondary-text-color);
 }
+
+.playlist-list-content__extreme {
+  color: var(--layout__warning-bright-color);
+  font-style: italic;
+}
+
 .playlist-list-content--edit .playlist-list-content__description {
   background-color: var(--layout__playlist-list-item-editing-description-background);
   color: var(--layout__primary-text-color);
 }
-/* Playlist-List-Content Buttons */
+.playlist-list-content--edit .playlist-list-content__extreme {
+  color: var(--layout__primary-text-color);
+  font-style: normal;
+  margin-left: 0.3rem;
+}
+/* Play
+list-List-Content Buttons */
 .playlist-list-content__button--confirm:hover .icon__use {
   fill: var(--layout__confirm-color);
 }
