feat: List all loaded curations in the curate page
I imported useMouse from a side project since it was handy (although a
bit of an overkill at the moment)

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -539,6 +539,10 @@ body {
 .curate-box-select--warn select option:not(.curate-box-select__invalid-option) {
   background-color: var(--layout__secondary-background);
 }
+/* Curate List Item */
+.curate-list-item:nth-child(n+2) { /* All but first */
+  border-color: var(--layout__tertiary-background);
+}
 
 
 /* ------ Log ------ */
