--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1055,6 +1055,32 @@ body {
 .curate-box-buttons__button:last-child {
   margin-right: 0;
 }
+/* Curate List Item */
+.curate-list-item {
+  display: flex;
+  width: 100%;
+  height: 1.3rem;
+  padding: 0.1rem;
+  user-select: none;
+}
+.curate-list-item:nth-child(n+2) { /* All but first */
+  border-top: solid 1px;
+}
+.curate-list-item__icon {
+  flex: 0 0 auto;
+  width: 1rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.curate-list-item__title {
+  flex: 1 1 auto;
+  vertical-align: middle;
+  /* Truncates the overflowing text */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 
 /* ------ Log ------ */
