feat: Extreme icons on List and Grid
refactor: Removed 'SYSTEM.' prefix from system Theme and Logo sets

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1615,6 +1615,9 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+.game-grid-item__thumb__icons__icon:nth-child(2) {
+  margin-right: 0.15rem;
+}
 /* GameGrid Item Title */
 .game-grid-item__title {
   padding: calc(var(--width) * 0.001rem);
