feat: Added string to Config TFG icons
Changed some styling

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -2428,3 +2428,8 @@ body {
   position: fixed;
   width: inherit;
 }
+.tag-filter-editor__content-header {
+  width:100%;
+  text-align: center;
+  font-weight: bold;
+}
