--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -2439,6 +2439,11 @@ body {
   margin-bottom: 1rem;
 }
 
+.tag-filter-editor__buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .tag-filter-editor__content {
   width: 100%;
   display: flex;
