feat: Sort Curations Button (A-Z) - Cheap

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -956,6 +956,9 @@ body {
   user-select: none;
 }
 /* Curate Page Left Sidebar */
+.curate-page__left-sidebar__sort-button {
+  width: 100%;
+}
 .curate-page__left-sidebar-item {
   display: flex;
   align-items: center;
