--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -467,6 +467,12 @@ body {
 .home-page__box-head {
   border-bottom-color: var(--layout__home-page-box-border);
 }
+.home-page__box-head--minimize {
+  border-left-color: var(--layout__home-page-box-border);
+}
+.home-page__box-head--minimize:hover {
+  background-color: var(--layout__game-item-background-hover);
+}
 /* HomePage Box - Upgrades */
 .home-page__box--upgrades .home-page__grayed-out {
   color: var(--layout__disabled-text-color);
