fix: Replace 'a' links with openExternal calls

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -1090,3 +1090,8 @@ body {
 .slider-checked {
   background-color: var(--layout__confirm-color);
 }
+
+.clickable-url {
+  text-decoration: underline;
+  cursor: pointer;
+}
