feat: Add tag dropdown input & dropdown list
This commit wasn't finished, so it may break something or have debug
code laying around.

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -546,6 +546,21 @@ body {
 .curate-list-item--selected {
   background-color: var(--layout__game-item-background-selected);
 }
+/* Curate Tag (Game tag for the curate page) */
+.curate-tag {
+  background-color: var(--layout__contrast-text-color);
+}
+.curate-tag:hover {
+  background-color: var(--layout__warning-dark-color);
+}
+
+/* Tag Dropdown Item */
+.tag-dropdown-item:hover {
+  background-color: var(--layout__game-item-background-hover);
+}
+.tag-dropdown-item--selected {
+  background-color: var(--layout__game-item-background-selected);
+}
 
 
 /* ------ Log ------ */
