--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -930,6 +930,9 @@ body {
   --column-width: 40em;
   --column-gutter: 2em;
 }
+.curate-box .input-dropdown__content {
+  max-height: 20rem;
+}
 .curate-box__columns {
   margin: auto;
   --column-gutter: 0.1rem;
@@ -1001,9 +1004,6 @@ body {
   border-spacing: 0.2rem;
 }
 /* Curate Box Row */
-.curate-box-row {
-
-}
 .curate-box-row__title {
   padding-right: 0.4em;
   user-select: none;
@@ -1082,6 +1082,23 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+/* Curate Tag (Game tag for the curate page) */
+.curate-tag {
+  display: inline-block;
+  margin-right: 0.5rem;
+  padding: 0 0.25rem;
+  user-select: none;
+}
+.curate-tag__icon {
+  width: 0.6rem;
+  height: 0.6rem;
+  margin-right: 0.2rem;
+}
+
+/* Tag Dropdown Item */
+.tag-dropdown-item {
+
 }
 
 
