feat: More curate context buttons
refactor: Cleaned up curate content visuals

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1027,6 +1027,9 @@ body {
 .curate-box-content__entry-icon {
   height: 1em;
 }
+.curate-box-content__entry-icon--collapse {
+  cursor: pointer;
+}
 /* Curate Box Image Titles */
 .curate-box-image-titles {
   display: flex;
