--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -986,7 +986,7 @@ body {
 
 /* Curate Box */
 .curate-box {
-  height: 100%;
+  min-height: 100%;
   padding: 0.5rem 0;
   --columns: 2;
   --column-width: 40em;
